--- a/qrc/package.json
+++ b/qrc/package.json
@@ -12,12 +12,13 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
     "expo": "~51.0.18",
-    "expo-barcode-scanner": "^13.0.1",
+    "expo-barcode-scanner": "~13.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-safe-area-context": "^4.10.7",
-    "react-native-screens": "^3.32.0"
+    "react-native-screens": "^3.32.0",
+    "expo-linking": "~6.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
