--- a/qrc/package.json
+++ b/qrc/package.json
@@ -23,7 +23,8 @@
     "react-native-animated-loader": "^1.0.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-web": "^0.19.12"
+    "react-native-web": "^0.19.12",
+    "lottie-react-native": "6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
