--- a/qrc/package.json
+++ b/qrc/package.json
@@ -17,14 +17,14 @@
     "expo-camera": "~15.0.13",
     "expo-linking": "~6.3.1",
     "expo-status-bar": "~1.12.1",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.74.3",
     "react-native-animated-loader": "^1.0.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-web": "^0.19.12",
-    "lottie-react-native": "6.7.0"
+    "react-native-web": "^0.19.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
