--- a/qrc/package.json
+++ b/qrc/package.json
@@ -24,6 +24,7 @@
     "react-native-animated-loader": "^1.0.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "^0.19.12"
   },
   "devDependencies": {
